# arcadia_engine

./: .gitignore  Cargo.toml
arcadia_engine_derive/: Cargo.toml
arcadia_engine_derive/src/: lib.rs
src/: config.ini  lib.rs  main.rs
src/.examples/: template.rs
src/assets/shaders/: fragment_shader.frag  test_fragment_shader.frag  test_vertex_shader.vert  vertex_shader.vert
src/core/: actor.rs  camera_actor.rs  chunks.rs  component.rs  game.rs  input.rs  mesh.rs  mod.rs  renderer.rs  shader.rs  texture.rs
src/core/components/: mesh_component.rs  mod.rs  move_component.rs  sprite_component.rs
src/game/: camera_actor.rs  game.rs  mod.rs
src/util/: color.rs  image.rs  logging.rs  mod.rs
src/util/math/: functions.rs  matrix.rs  mod.rs  quaternion.rs  vector.rs
tests/: test_matrix.rs  test_vector.rs
