[package]
name = "rust_opengl"
version = "0.1.0"
authors = ["TJ Riley <tjriles96@gmail.com>"]
edition = "2024"

publish = false

[dependencies]
bytemuck = "1.25.0"
chrono = "0.4.44"
colored = "3.1.1"
gl = "0.14.0"
glfw = "0.62.0"
image = "0.25.10"


[dev-dependencies]
beryllium = "^0.13.3"
imagine = "^0.5.3"
