[package]
name = "arcadia_engine"
version = "0.1.1"
authors = ["TJ Riley <tjriles96@gmail.com>"]
edition = "2024"

publish = false

[dependencies]
arcadia_engine_derive = { path = "arcadia_engine_derive" }
bytemuck = "1.25.0"
chrono = "0.4.44"
colored = "3.1.1"
gl = "0.14.0"
glfw = "0.62.0"
image = "0.25.10"


[dev-dependencies]
